[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The trio of tools used for the backend of Cut Your Losses"
authors = ["Adam Y. Cole II <afewburritos@gmail.com>"]
license = "ALL RIGHTS RESERVED"
readme = "README.md"
packages = [
    { include = "cyl_backend" },
    { include = "cyl_analyzer" },
    { include = "cyl_updater" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
flask = "^2.3.3"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.analyzer]
optional = true

[tool.poetry.group.analyzer.dependencies]


[tool.poetry.group.updater]
optional = true

[tool.poetry.group.updater.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
